expected/main/gens/primWordToBit-neg-64.err
ERROR: "actual/main/gens/primWordToBit-neg-64.lc", line 3
external toBit65  {primWordToBit 65}  :: Word -> Bit 65
         ^
No generated implementation: Argument value 65 not accepted; value must be in the range 0 to 64

ERROR: "actual/main/gens/primWordToBit-neg-64.lc", line 4
external toBit192 {primWordToBit 192} :: Word -> Bit 192
         ^
No generated implementation: Argument value 192 not accepted; value must be in the range 0 to 64

ERROR: Aborting after 2 previously reported errors

